--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </head>
 <body>
   <div class="card">
-    <h1>Happy Diwali <span class="sparkle">✨</span></h1>
+    <h1>Happy Diwali Everyone!!!!!!!!!!!! <span class="sparkle">✨</span></h1>
     <p>Wishing you light, joy and prosperity.</p>
   </div>
 </body>
